# closestpoint

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  accel.cpp  accel.h  closestpointquery.cpp  closestpointquery.h  common.h  geometry.h  main.cpp  matrix.h  mesh.cpp  mesh.h  queryfunctions.h  sampling.h  util.cpp  util.h  vector3.h
src/tests/: test_geometry.cpp  test_matrix.cpp  test_queryfunctions.cpp  test_sampling.cpp  test_util.cpp  test_vector.cpp
